change background color body

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -305,6 +305,7 @@ body {
 
 .footer {
   border-top: 1px solid #dfdede;
+  background-color: white;
   padding: 5rem 0px;
   h4 {
     font-size: 16px;
