--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -338,3 +338,13 @@ body {
     }
   }
 }
+
+.loading-page {
+  height: 100vh;
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
